[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.3.0"
tokio = { version = "1.28", features = ["io-util"] }
pin-project = "1.1.0"
futures-util = { version = "0.3.28", default-features = false }
base64 = "0.13.0"
bytes = "1.4.0"
uuid = "1.9.1"
ipnetwork = "0.20.0"
reqwest = "0.12.5"
serde_json = "1.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
